tests/paczka2/big_fuzzy/45157009.err
Error in line 1: N4e A845 75,7
Error in line 2: N4e S296 31,9
Error in line 3: N4e A845 72,2
Error in line 27: ELa5r1UFe A845 193,4
Error in line 25: tAL S296 226,4
Error in line 21: A838 A838 9,8
Error in line 31: A838 A845 58,5
Error in line 19: WWZ5j8loRPd A645 5,4
Error in line 28: Sol2V S296 5,7
Error in line 36: C3IbDMiZ A645 16,8
Error in line 40: tAL A645 1,3
Error in line 34: WWZ5j8loRPd A845 6,9
Error in line 41: C3IbDMiZ A845 20,4
Error in line 35: Sol2V A838 48,4
Error in line 54: ELa5r1UFe A645 25,6
Error in line 61: WWZ5j8loRPd A838 4,09
Error in line 58: WWZ5j8loRPd A645 1,1
Error in line 50: Sol2V A845 43,5
Error in line 74: ELa5r1UFe S296 44,7
Error in line 69: N4e A645 94,9
Error in line 87: N4e A838 59,7
Error in line 98: tAL A838 34,
Error in line 93: A838 S296 46,8
Error in line 91: tAL A845 21,2
Error in line 108: Sol2V A845 16,3
Error in line 109: Sol2V A838 32,0
Error in line 68: C3IbDMiZ A845 141,7
Error in line 86: WWZ5j8loRPd A838 88,5
Error in line 116: ELa5r1UFe A838 398,7
Error in line 112: N4e A845 14,5
Error in line 128: C3IbDMiZ A645 75,1
Error in line 130: Sol2V A645 2,4
Error in line 126: tAL S296 9,3
Error in line 123: ELa5r1UFe S296 82,9
Error in line 131: N4e A838 70,4
Error in line 142: WWZ5j8loRPd S296 5,9
Error in line 136: tAL A645 29,1
Error in line 140: Sol2V A845 92,8
Error in line 151: Sol2V A645 4,7
Error in line 152: Sol2V A838 87,1
Error in line 154: ELa5r1UFe A838 34,5
Error in line 157: ELa5r1UFe A845 49,1
Error in line 156: WWZ5j8loRPd A838 78,3
Error in line 179: C3IbD\iZ A845 37,6
Error in line 158: A838 A838 47,6
Error in line 186: ELa5r1UFe A838 72,2
Error in line 178: C3IbDMiZ A838 94,7
Error in line 185: A838 A645 27,0
Error in line 188: C3IbDMiZ A845 38,4
Error in line 191: C3IbDMiZ A838 26,4
Error in line 201: ELa5r1UFe A838 27,7
Error in line 212: ELa5r1UFe S296 24,6
Error in line 229: tAL S296 23,2
Error in line 231: WWZ5j8loRPd A838 44,0
Error in line 230: tAL A845 63,4
